docs: changes the page template and styling for responsive layout issues

--- a/docs/.kask/propagate/index.css
+++ b/docs/.kask/propagate/index.css
@@ -77,97 +77,79 @@ p {
   margin: 10px 0;
 }
 
-footer {
-  width: 100%;
-  padding: 20px 20px 100px;
-  border-top: 0.5px solid #eee;
-}
-
-html {
-  width: 100%;
-}
-
 body {
   width: 100vw;
   padding-bottom: 200px;
 
-  #markdown-page-column-layout {
-    width: 100vw;
-    padding: 20px;
+  @media screen and (width<=800px) {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
 
-    @media screen and (width<700px) {
-      position: relative;
+  @media screen and (800px<width) and (width<1700px) {
+    display: grid;
+    grid-template-columns: 250px 1fr;
+    justify-content: left;
+    align-items: start;
+    gap: 20px;
+
+    position: relative;
+
+    & > #navs {
+      grid-column: 1 / 2;
+      grid-row: 2 / 3;
+
       display: flex;
       flex-direction: column;
-      gap: 20px;
-
-      & > #navs {
-        display: contents;
-      }
+      gap: 100px;
+      padding: 20px;
     }
 
-    @media screen and (700px<=width) and (width<1700px) {
-      display: grid;
-      grid-template-columns: min-content 1fr;
-      justify-content: left;
-      align-items: start;
-      gap: 20px;
-
-      position: relative;
-
-      & > #navs {
-        grid-column: 1 / 2;
-        grid-row: 1 / 2;
-
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-      }
-
-      & > main {
-        grid-column: 2 / 3;
-        grid-row: 1 / 2;
-        overflow-x: hidden;
-      }
-    }
-
-    @media screen and (1700px<=width) {
-      display: grid;
-      grid-template-columns: 350px 1fr 350px;
-      justify-content: space-between;
-      align-items: start;
-      gap: 20px;
-
-      position: relative;
-
-      & > #navs {
-        display: contents;
-
-        & > nav#sitemap {
-          grid-column: 1 / 2;
-          grid-row: 1 / 2;
-          top: 20px;
-        }
-
-        & > nav#toc {
-          grid-column: 3 / 4;
-          grid-row: 1 / 2;
-          top: 20px;
-        }
-      }
-
-      & > main {
-        grid-column: 2 / 3;
-        grid-row: 1 / 2;
-        justify-self: center;
-        margin-bottom: 500px;
-        width: 100%;
-        overflow: hidden;
-      }
+    & > main {
+      grid-column: 2 / 3;
+      grid-row: 2 / 3;
+      overflow-x: hidden;
     }
   }
-}
 
-hr {
-  display: none;
+  @media screen and (1700px<=width) {
+    display: grid;
+    grid-template-columns: 350px 1fr 350px;
+    justify-content: space-between;
+    align-items: start;
+    gap: 20px;
+
+    position: relative;
+
+    & > #navs {
+      display: contents;
+
+      & > nav#sitemap {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+        top: 0;
+        position: sticky;
+        padding: 20px;
+      }
+
+      & > nav#toc {
+        grid-column: 3 / 4;
+        grid-row: 2 / 3;
+        top: 0;
+        position: sticky;
+        padding: 20px;
+      }
+    }
+
+    & > main {
+      grid-column: 2 / 3;
+      grid-row: 2 / 3;
+      justify-self: center;
+      margin-bottom: 500px;
+      width: 100%;
+      overflow: hidden;
+    }
+  }
 }
