--- a/docs/.kask/propagate/markdown.css
+++ b/docs/.kask/propagate/markdown.css
@@ -8,11 +8,8 @@ body {
     margin: 20px 0;
   }
 
-  & > ul,
-  & > ol,
-  & > blockquote {
-    min-width: 70%;
-    max-width: 600px;
+  & > *:not(pre) {
+    padding: 0 20px;
   }
 
   > p:has(img),
@@ -48,6 +45,7 @@ body {
 
   img {
     object-fit: scale-down;
+    border-radius: 8px;
   }
 
   blockquote {
